<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/browse" />
        <item
            android:id="@+id/nav_catalogue"
            android:icon="@drawable/ic_catalogue"
            android:title="@string/catalogue" />
        <item android:id="@+id/nav_achievements"
            android:icon="@drawable/ic_baseline_bookmark_24"
            android:title="@string/achievements" />
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item android:id="@+id/nav_logout"
            android:checkable="false"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/log_out" />
    </group>

</menu>