<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/progressText"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <TextView
                    android:id="@+id/progressLabel"
                    android:layout_marginRight="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/progress_label"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginEnd="5sp" />

                <TextView
                    android:id="@+id/progressTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/progress_sophomore"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <ProgressBar
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="50dp"
                android:id="@+id/progressBar"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:progressTint="@color/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progressText"
                android:progress="45"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/majorCoursesLabel"
                android:layout_below="@id/progressBar"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/major_courses_label"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/majorCourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/majorCoursesLabel"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <TextView
                android:id="@+id/genEdLabel"
                android:layout_below="@+id/majorCourses"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/general_education_label"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/generalCourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/genEdLabel"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>